<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.lularoe.erinfetz.imagecapture.MainActivity"
    tools:showIn="@layout/activity_main">


    <TableLayout
        android:id="@+id/selectionLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:columnOrderPreserved="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:text="@string/label_product"
                android:textAlignment="viewEnd"
                android:textColor="@color/colorLlrDarkBlue"
                android:textSize="14sp"
                android:textStyle="bold" />


            <Spinner
                android:id="@+id/spinner1"
                style="@android:style/Widget.Holo.Light.Spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_weight="2"
                android:entries="@array/product_styles"
                android:padding="1dp"
                android:prompt="@string/label_select_product" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:text="@string/label_size"
                android:textAlignment="viewEnd"
                android:textColor="@color/colorLlrDarkBlue"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner2"
                style="@android:style/Widget.Holo.Light.Spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_weight="2"
                android:padding="1dp"
                android:prompt="@string/label_select_size" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:text="@string/action_TakeMashupPicture"
                android:textAlignment="textEnd"
                android:textColor="@color/colorLlrDarkBlue"
                android:textSize="14sp"
                android:textStyle="bold" />


            <CheckBox
                android:id="@+id/mashupCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginLeft="15dp"
                android:layout_weight="2"
                android:checked="false" />

        </TableRow>
    </TableLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/imageLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectionLayout">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/deletePicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            app:layout_constraintLeft_toRightOf="@+id/imageView1"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_input_delete" />

    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/takePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/round_corners"
        android:drawableLeft="@android:drawable/ic_menu_camera"
        android:drawablePadding="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/action_TakePicture"
        android:textAlignment="center"
        android:textColor="@color/colorLlrGrey"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
